Added data analysis to notebook

--- a/detector_train.ipynb
+++ b/detector_train.ipynb
@@ -33,10 +33,11 @@
    "outputs": [],
    "source": [
     "# Настройка путей\n",
-    "datasets_dir = Path(\"./share/raw_data\")\n",
-    "OUTPUT_DIR = Path(\"./share/combined_dataset\")\n",
+    "datasets_dir = Path(\"data/raw\")\n",
+    "OUTPUT_DIR = Path(\"data/processed\")\n",
     "ANNOTATIONS_DIR = OUTPUT_DIR / \"annotations\"\n",
     "IMAGES_DIR = OUTPUT_DIR / \"images\"\n",
+    "\n",
     "\n",
     "# Создание директорий\n",
     "ANNOTATIONS_DIR.mkdir(parents=True, exist_ok=True)\n",
@@ -76,10 +77,52 @@
     "\n",
     "# Проверка результатов\n",
     "image_files = list(IMAGES_DIR.iterdir())\n",
+    "annotation_files = list(ANNOTATIONS_DIR.iterdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Загрузка и обработка датасетов\n",
+    "for dataset in datasets:\n",
+    "    download_dataset(dataset, datasets_dir)\n",
+    "    process_dataset(dataset, IMAGES_DIR, ANNOTATIONS_DIR)\n",
+    "    print(f\"Processing Dataset {dataset.name}_{dataset.meta_type}...\")\n",
+    "    print_dataset_summary(dataset)\n",
+    "    plot_sample_images(dataset, num_samples=3)\n",
+    "\n",
+    "# Проверка результатов\n",
+    "image_files = list(IMAGES_DIR.iterdir())\n",
     "annotation_files = list(ANNOTATIONS_DIR.iterdir())\n",
     "\n",
     "print(f\"\\nВсего изображений: {len(image_files)}\")\n",
-    "print(f\"Всего аннотаций: {len(annotation_files)}\")"
+    "print(f\"\\nВсего аннотаций: {len(annotation_files)}\")\n",
+    "\n",
+    "# Анализ объединенного датасета\n",
+    "combined_dataset = Dataset(\n",
+    "    name=\"combined\",\n",
+    "    base_path=OUTPUT_DIR\n",
+    ")\n",
+    "\n",
+    "print(\"\\nАнализ объединенного датасета:\")\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "# Получаем статистику по датасету\n",
+    "stats = print_dataset_summary(combined_dataset)\n",
+    "\n",
+    "# Визуализируем примеры изображений с разметкой\n",
+    "print(\"\\nПримеры изображений с разметкой:\")\n",
+    "plot_sample_images(combined_dataset, num_samples=5)\n",
+    "\n",
+    "print(\"\\nСтатистика по датасету:\")\n",
+    "print(f\"Среднее количество объектов на изображение: {stats['avg_boxes_per_image']:.2f}\")\n",
+    "print(f\"Процент изображений с дронами: {(stats['images_with_drones'] / stats['total_images'] * 100):.1f}%\")\n",
+    "\n",
+    "# Проверяем баланс классов и размеры объектов\n",
+    "print(\"\\nПроверка завершена. Можно приступать к обучению модели.\")"
    ]
   },
   {
