--- a/attempt_1.ipynb
+++ b/attempt_1.ipynb
@@ -20,13 +20,13 @@
     "from sklearn import metrics\n",
     "from sklearn.manifold import TSNE\n",
     "\n",
-    "from hse_dd.src.utils import Dataset, download_dataset, process_dataset\n",
-    "from hse_dd.src.nn import YoloDataset"
+    "from hse_dd.utils import Dataset, download_dataset, process_dataset\n",
+    "from hse_dd.nn import YoloDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9d0ee999-28aa-46be-951a-d1166fda93e3",
    "metadata": {},
    "outputs": [],
@@ -52,12 +52,18 @@
     "        name=\"mcagriaksoy\",\n",
     "        base_path=datasets_dir / \"mcagriaksoy\" / \"Database1\" / \"Database1\"\n",
     "    ),\n",
+    "    Dataset(\n",
+    "        name=\"militaryaircraftdetectiondataset\",\n",
+    "        base_path=datasets_dir / \"militaryaircraftdetectiondataset\" / \"dataset\",\n",
+    "        not_target=True,\n",
+    "        percentage_to_use=5\n",
+    "    ),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b34d8609-a7dd-4101-944e-f08ef155406a",
    "metadata": {},
    "outputs": [
@@ -65,45 +71,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Dataset dasmehdixtr: 2719it [00:01, 2191.04it/s]\n"
+      "Processing Dataset dasmehdixtr: 0it [00:00, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Dataset dasmehdixtr_yolo...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Dataset dasmehdixtr: 3291it [00:00, 3845.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Dataset dasmehdixtr_xml...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Dataset mcagriaksoy: 8025it [00:01, 4452.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Dataset mcagriaksoy_yolo...\n",
-      "\n",
-      "Всего изображений: 5673\n",
-      "Всего аннотаций: 6467\n"
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0xff in position 0: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m dataset \u001b[38;5;129;01min\u001b[39;00m datasets:\n\u001b[1;32m      2\u001b[0m     download_dataset(dataset, datasets_dir)\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mprocess_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mIMAGES_DIR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mANNOTATIONS_DIR\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProcessing Dataset \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset\u001b[38;5;241m.\u001b[39mmeta_type\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Проверка результатов\u001b[39;00m\n",
+      "File \u001b[0;32m~/projects/study/hse/hse-dd/src/hse_dd/utils.py:122\u001b[0m, in \u001b[0;36mprocess_dataset\u001b[0;34m(dataset, output_images_dir, output_annotations_dir, seed)\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m    121\u001b[0m image_dest\u001b[38;5;241m.\u001b[39mwrite_bytes(image\u001b[38;5;241m.\u001b[39mread_bytes())\n\u001b[0;32m--> 122\u001b[0m annotation_dest\u001b[38;5;241m.\u001b[39mwrite_text(\u001b[43mimage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.9/Frameworks/Python.framework/Versions/3.12/lib/python3.12/pathlib.py:1028\u001b[0m, in \u001b[0;36mPath.read_text\u001b[0;34m(self, encoding, errors)\u001b[0m\n\u001b[1;32m   1026\u001b[0m encoding \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mtext_encoding(encoding)\n\u001b[1;32m   1027\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mopen(mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39mencoding, errors\u001b[38;5;241m=\u001b[39merrors) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m-> 1028\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<frozen codecs>:322\u001b[0m, in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xff in position 0: invalid start byte"
      ]
     }
    ],
@@ -268,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
